--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "swiper": "^6.8.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
